--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Loaner Car Agreement - Midas of Norwalk</title>
   <style>
     body {
@@ -58,7 +58,8 @@
 <body>
   <h1>Midas of Norwalk - Loaner Car Agreement</h1>
   <div id="thank-you">Thank you! Your form has been submitted.</div>
-  <form id="loaner-form" action="https://formspree.io/f/YOUR_FORM_ID" method="POST" enctype="multipart/form-data">
+
+  <form id="loaner-form" action="https://formspree.io/f/xeozgolk" method="POST" enctype="multipart/form-data">
     <h2>Customer Information</h2>
     <label>Full Name <input type="text" name="name" required></label>
     <label>Email <input type="email" name="email" required></label>
@@ -137,7 +138,7 @@
       const signatureData = canvas.toDataURL();
       document.getElementById('signature-data').value = signatureData;
 
-      // Show thank you message after slight delay (simulating form submission)
+      // Show thank-you message after short delay
       setTimeout(() => {
         form.style.display = 'none';
         document.getElementById('thank-you').style.display = 'block';
@@ -146,4 +147,3 @@
   </script>
 </body>
 </html>
-
